--- a/package.json
+++ b/package.json
@@ -11,9 +11,15 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "axios": "^0.20.0",
+    "framer-motion": "^2.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "react-query": "^2.23.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.3",
+    "recoil": "^0.0.13",
+    "styled-components": "^5.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -49,5 +55,6 @@
     "eslint-plugin-react": "7.20.6",
     "eslint-plugin-react-hooks": "4.1.2",
     "prettier": "2.1.1"
-  }
+  },
+  "proxy": "http://localhost:3008/"
 }
