Added husky, typescript, eslint. Applied design pattern file structure.

--- a/.huskyrc.json
+++ b/.huskyrc.json
@@ -1,6 +1,6 @@
 {
     "hooks": {
-        "pre-commit": "eslint . --fix",
+        "pre-commit": "yarn lint",
         "pre-push": "yarn test"
     }
 }
