--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
         "framer-motion": "^2.7.2",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
-        "react-query": "^2.23.0",
         "react-router-dom": "^5.2.0",
         "react-scripts": "3.4.3",
         "recoil": "^0.0.13",
@@ -26,8 +25,9 @@
     "scripts": {
         "start": "react-scripts start",
         "build": "react-scripts build",
-        "test": "react-scripts test",
-        "eject": "react-scripts eject"
+        "test": "jest --passWithNoTests",
+        "eject": "react-scripts eject",
+        "lint": "eslint \"*/**/*.{js,ts,tsx}\" --fix"
     },
     "eslintConfig": {
         "extends": "react-app"
@@ -45,19 +45,24 @@
         ]
     },
     "devDependencies": {
+        "@types/jest": "^26.0.14",
+        "@types/node": "^14.11.8",
+        "@types/react": "^16.9.52",
+        "@types/react-dom": "^16.9.8",
+        "@types/react-router-dom": "^5.1.6",
+        "@types/styled-components": "^5.1.4",
+        "@typescript-eslint/eslint-plugin": "^4.4.1",
+        "@typescript-eslint/parser": "^4.4.1",
         "babel-eslint": "10.1.0",
         "eslint": "7.8.1",
-        "eslint-config-airbnb": "18.2.0",
         "eslint-config-prettier": "6.11.0",
-        "eslint-config-wesbos": "1.0.1",
-        "eslint-plugin-html": "6.1.0",
-        "eslint-plugin-import": "2.22.0",
         "eslint-plugin-jsx-a11y": "6.3.1",
         "eslint-plugin-prettier": "3.1.4",
         "eslint-plugin-react": "7.20.6",
         "eslint-plugin-react-hooks": "4.1.2",
         "husky": "^4.3.0",
-        "prettier": "2.1.1"
+        "prettier": "2.1.1",
+        "typescript": "^4.0.3"
     },
     "proxy": "http://localhost:3008"
 }
