Upgraded react-router-dom to 6.0.0-beta.0.

--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
         "axios": "^0.20.0",
         "formik": "^2.1.7",
         "framer-motion": "^2.7.2",
+        "history": "^5.0.0",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
-        "react-router-dom": "^5.2.0",
+        "react-router-dom": "^6.0.0-beta.0",
         "react-scripts": "3.4.3",
         "recoil": "^0.0.13",
         "styled-components": "^5.2.0",
@@ -26,6 +27,7 @@
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "jest --passWithNoTests",
+        "test:watch": "jest --watch",
         "eject": "react-scripts eject",
         "lint": "eslint \"*/**/*.{js,ts,tsx}\" --fix"
     },
