--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "author": "Hampus Olsen",
     "license": "MIT",
     "dependencies": {
+        "@reduxjs/toolkit": "^1.4.0",
         "@testing-library/jest-dom": "^4.2.4",
         "@testing-library/react": "^9.3.2",
         "@testing-library/user-event": "^7.1.2",
@@ -17,9 +18,9 @@
         "history": "^5.0.0",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
+        "react-redux": "^7.2.1",
         "react-router-dom": "^6.0.0-beta.0",
         "react-scripts": "3.4.3",
-        "recoil": "^0.0.13",
         "styled-components": "^5.2.0",
         "yup": "^0.29.3"
     },
@@ -51,6 +52,7 @@
         "@types/node": "^14.11.8",
         "@types/react": "^16.9.52",
         "@types/react-dom": "^16.9.8",
+        "@types/react-redux": "^7.1.9",
         "@types/react-router-dom": "^5.1.6",
         "@types/styled-components": "^5.1.4",
         "@typescript-eslint/eslint-plugin": "^4.4.1",
