setup/Reconfigured eslint and prettier to extended airbnb.

--- a/.huskyrc.json
+++ b/.huskyrc.json
@@ -1,6 +1,6 @@
 {
-    "hooks": {
-        "pre-commit": "yarn lint",
-        "pre-push": "yarn test"
-    }
+  "hooks": {
+    "pre-commit": "yarn lint:fix",
+    "pre-push": "yarn test"
+  }
 }
