--- a/package.json
+++ b/package.json
@@ -1,72 +1,74 @@
 {
-    "name": "globetrotter-www",
-    "version": "1.0.0",
-    "private": true,
-    "description": "Web application for globetrotter",
-    "main": "index.js",
-    "repository": "git@github.com:hampusolsen/globetrotter-www.git",
-    "author": "Hampus Olsen",
-    "license": "MIT",
-    "dependencies": {
-        "@reduxjs/toolkit": "^1.4.0",
-        "@testing-library/jest-dom": "^4.2.4",
-        "@testing-library/react": "^9.3.2",
-        "@testing-library/user-event": "^7.1.2",
-        "axios": "^0.20.0",
-        "formik": "^2.1.7",
-        "framer-motion": "^2.7.2",
-        "history": "^5.0.0",
-        "react": "^16.13.1",
-        "react-dom": "^16.13.1",
-        "react-redux": "^7.2.1",
-        "react-router-dom": "^6.0.0-beta.0",
-        "react-scripts": "3.4.3",
-        "styled-components": "^5.2.0",
-        "yup": "^0.29.3"
-    },
-    "scripts": {
-        "start": "react-scripts start",
-        "build": "react-scripts build",
-        "test": "jest --passWithNoTests",
-        "test:watch": "jest --watch",
-        "eject": "react-scripts eject",
-        "lint": "eslint \"*/**/*.{js,ts,tsx}\" --fix"
-    },
-    "eslintConfig": {
-        "extends": "react-app"
-    },
-    "browserslist": {
-        "production": [
-            ">0.2%",
-            "not dead",
-            "not op_mini all"
-        ],
-        "development": [
-            "last 1 chrome version",
-            "last 1 firefox version",
-            "last 1 safari version"
-        ]
-    },
-    "devDependencies": {
-        "@types/jest": "^26.0.14",
-        "@types/node": "^14.11.8",
-        "@types/react": "^16.9.52",
-        "@types/react-dom": "^16.9.8",
-        "@types/react-redux": "^7.1.9",
-        "@types/react-router-dom": "^5.1.6",
-        "@types/styled-components": "^5.1.4",
-        "@typescript-eslint/eslint-plugin": "^4.4.1",
-        "@typescript-eslint/parser": "^4.4.1",
-        "babel-eslint": "10.1.0",
-        "eslint": "7.8.1",
-        "eslint-config-prettier": "6.11.0",
-        "eslint-plugin-jsx-a11y": "6.3.1",
-        "eslint-plugin-prettier": "3.1.4",
-        "eslint-plugin-react": "7.20.6",
-        "eslint-plugin-react-hooks": "4.1.2",
-        "husky": "^4.3.0",
-        "prettier": "2.1.1",
-        "typescript": "^4.0.3"
-    },
-    "proxy": "http://localhost:3008"
+  "name": "globetrotter-www",
+  "version": "1.0.0",
+  "private": true,
+  "description": "Web application for globetrotter",
+  "main": "index.js",
+  "repository": "git@github.com:hampusolsen/globetrotter-www.git",
+  "author": "Hampus Olsen",
+  "license": "MIT",
+  "dependencies": {
+    "@reduxjs/toolkit": "^1.4.0",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
+    "axios": "^0.20.0",
+    "formik": "^2.1.7",
+    "framer-motion": "^2.7.2",
+    "history": "^5.0.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-redux": "^7.2.1",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^6.0.0-beta.0",
+    "react-scripts": "3.4.3",
+    "styled-components": "^5.2.0",
+    "yup": "^0.29.3"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "jest --passWithNoTests",
+    "test:watch": "jest --watch",
+    "eject": "react-scripts eject",
+    "lint": "npx eslint ./src/ --ext .js,.ts,.tsx",
+    "lint:fix": "npx eslint ./src/ --ext .js,.ts,.tsx --fix"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "@types/jest": "^26.0.14",
+    "@types/node": "^14.11.8",
+    "@types/react": "^16.9.52",
+    "@types/react-dom": "^16.9.8",
+    "@types/react-redux": "^7.1.9",
+    "@types/react-router-dom": "^5.1.6",
+    "@types/styled-components": "^5.1.4",
+    "@typescript-eslint/eslint-plugin": "^4.4.1",
+    "@typescript-eslint/parser": "^4.4.1",
+    "eslint": "^7.11.0",
+    "eslint-config-airbnb-typescript": "^11.2.1",
+    "eslint-config-prettier": "^6.13.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest": "^24.1.0",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.21.4",
+    "eslint-plugin-react-hooks": "^4.1.2",
+    "husky": "^4.3.0",
+    "jest": "^26.5.3",
+    "prettier": "^2.1.2",
+    "typescript": "^4.0.3"
+  },
+  "proxy": "http://localhost:3008"
 }
