--- a/package.json
+++ b/package.json
@@ -14,12 +14,11 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.20.0",
     "formik": "^2.1.7",
-    "framer-motion": "^2.7.2",
     "history": "^5.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
-    "react-router": "^5.2.0",
+    "react-router": "^6.0.0-beta.0",
     "react-router-dom": "^6.0.0-beta.0",
     "react-scripts": "3.4.3",
     "styled-components": "^5.2.0",
@@ -69,6 +68,5 @@
     "jest": "^26.5.3",
     "prettier": "^2.1.2",
     "typescript": "^4.0.3"
-  },
-  "proxy": "http://localhost:3008"
+  }
 }
