--- a/.eslintrc
+++ b/.eslintrc
@@ -39,7 +39,8 @@
     "react/jsx-filename-extension": "off",
     "react/prop-types": "off",
     "@typescript-eslint/ban-ts-comment": "off",
-    "@typescript-eslint/no-shadow": "off"
+    "@typescript-eslint/no-shadow": "off",
+    "jsx-a11y/label-has-associated-control": "off"
   },
   "settings": {
     "react": {
