--- a/.eslintrc
+++ b/.eslintrc
@@ -33,11 +33,17 @@
     "prettier"
   ],
   "rules": {
+    "no-unused-vars": "off",
     "react/jsx-props-no-spreading": "off",
     "react/jsx-filename-extension": "off",
+    "react/destructuring-assignment": "off",
     "react/prop-types": "off",
     "@typescript-eslint/ban-ts-comment": "off",
     "@typescript-eslint/no-shadow": "off",
+    "@typescript-eslint/no-unused-vars": [
+      "warn",
+      { "argsIgnorePattern": "^_" }
+    ],
     "jsx-a11y/label-has-associated-control": "off"
   },
   "settings": {
