--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "axios": "^0.20.0",
     "formik": "^2.2.1",
     "history": "^5.0.0",
+    "jotai": "^0.10.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-query": "^2.26.1",
     "react-router": "^6.0.0-beta.0",
     "react-router-dom": "^6.0.0-beta.0",
     "react-scripts": "3.4.3",
