feature(travel): Completes form step logic and validation.

--- a/.eslintrc
+++ b/.eslintrc
@@ -34,11 +34,13 @@
   ],
   "rules": {
     "import/no-cycle": "off",
+    "import/prefer-default-export": "off",
     "no-unused-vars": "off",
     "react/jsx-props-no-spreading": "off",
     "react/jsx-filename-extension": "off",
     "react/destructuring-assignment": "off",
     "react/prop-types": "off",
+    "@typescript-eslint/naming-convention": "off",
     "@typescript-eslint/no-this-alias": "off",
     "@typescript-eslint/ban-ts-comment": "off",
     "@typescript-eslint/no-shadow": "off",
