refactor(state): Changes state typings and adds getters.

--- a/.eslintrc
+++ b/.eslintrc
@@ -36,6 +36,7 @@
     "import/no-cycle": "off",
     "import/prefer-default-export": "off",
     "no-unused-vars": "off",
+    "no-underscore-dangle": "off",
     "react/jsx-props-no-spreading": "off",
     "react/jsx-filename-extension": "off",
     "react/destructuring-assignment": "off",
